# RosatomSSO

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  loader.py  logger.py  pyproject.toml  requirements.txt  set_commands.py  setup.cfg
database/: postgres.py
environment/: docker-compose.yml.template
filters/: __init__.py
filters/message/: __init__.py
filters/user/: __init__.py  role.py
handlers/: __init__.py  _utils.py  any.py  errors.py
handlers/users/: __init__.py  commands.py
handlers/users/admin/: __init__.py  add_new_admin.py  commands.py  confirmations.py  inspect_users.py
handlers/users/admin/activities/: __init__.py  create.py  edit.py  submenu.py  (+1 more)
handlers/users/common_user/: confirmations.py  points.py  registration.py
keyboards/: __init__.py  admin.py  callback_data.py  common_user.py
middlewares/: __init__.py  activity.py
migrations/: __init__.py  __main__.py
migrations/postgres/: __init__.py
rosatom_sso/: __init__.py  __main__.py  config.py  loader.py  logger.py  set_commands.py
rosatom_sso/database/: __init__.py  postgres.py
rosatom_sso/filters/user/: role.py
rosatom_sso/handlers/: _utils.py  any.py  errors.py  exceptions.py
rosatom_sso/handlers/errors/: __init__.py  _utils.py  errors.py
rosatom_sso/handlers/users/: commands.py
rosatom_sso/keyboards/: __init__.py  _utils.py  admin.py  callback_data.py
rosatom_sso/middlewares/: activity.py
rosatom_sso/migrations/: __init__.py
rosatom_sso/utils/: __init__.py  interfaces.py  message_file.py
utils/: interfaces.py  message_file.py
(+40 files in other folders)
