[tool.poetry]
name = "rosatom-sso"
version = "1.0.0"
description = "RosatomSSO official Telegram Bot"
authors = ["Андрей Баранов <dushez.baranov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
aiogram = "2.25.1"
pytz = "^2023.3"
openpyxl = "~3.1.2"
redis = "~5.0.1"
sqlalchemy = "~2.0.21"
psycopg2-binary = "^2.9.9"
aiohttp = "^3.8.5"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"
